--- a/GBF Data Service/GBF Data Service/GBF Data Service.csproj
+++ b/GBF Data Service/GBF Data Service/GBF Data Service.csproj
@@ -5,5 +5,10 @@
     <RootNamespace>GBF_Data_Service</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+  </ItemGroup>
+
 
 </Project>
